--- a/test.html
+++ b/test.html
@@ -1,110 +1,100 @@
 ﻿<!DOCTYPE html>
-<html lang="de">
+<html lang="us">
 <head>
   <meta charset="UTF-8">
-  <title>Dein persönlicher Bericht</title>
+  <title>AI Answer - Email-AI</title>
   <style>
-    body { margin:0; padding:0; background-color:#1E1E1E; color:#D4D4D4; font-family:'Segoe UI', Tahoma, sans-serif; }
+    body { margin:0; padding:0; background-color:#f0f9ff; color:#D4D4D4; font-family:'Segoe UI', Tahoma, sans-serif; }
     a { color:#8ED1FC; }
-    .banner { text-align:center; padding:20px 0; }
-    .banner img { max-width:600px; width:90%; height:auto; border-radius:8px; }
+    .banner { text-align:center; }
+    .banner img { width:100%; height:100%; max-height: calc(100vw - 50px); border-radius:3px; }
     h1 { font-size:32px; color:#8ED1FC; text-align:center; margin:30px 0 10px; }
     .info-row { font-size:18px; text-align:center; margin:5px 0; }
-    .info-row span { margin:0 20px; color:#C0C0C0; }
-    .body-container { 
-      background-color:#2A2A2A; 
-      margin:0 20px 30px 20px; 
-      padding:25px; 
-      border-radius:8px; 
-      box-shadow:0 3px 6px rgba(0,0,0,0.5); 
-      font-size:13px; 
-      line-height:1.6; 
-      color:#E0E0E0; 
+    .info-row span { margin:0 20px; color:#46494a; }
+    .body-container {
+      background-color:#ebf7fe;
+      margin:0 20px 30px 20px;
+      padding:25px;
+      border-radius:8px;
+      box-shadow:0 3px 6px rgba(0,0,0,0.5);
+      font-size:13px;
+      line-height:1.6;
+      color:#080808;
     }
     .message-id { font-size:12px; color:#777; text-align:right; margin:0 20px 20px 20px; }
     .links-row { text-align:center; margin-bottom:30px; }
   </style>
 </head>
 <body>
-
-  <!-- Top-Banner -->
-  <div class="banner" style="background:#111111;">
-    <img src="https://via.placeholder.com/600x100/333333/8ED1FC?text=Top+Banner" alt="Banner oben">
-  </div>
-
-  <!-- Titel -->
-  <h1>Dein persönlicher Bericht</h1>
-
-  <!-- Nutzer-Infos -->
+  <div class="banner" style="background:#cdebfe;"><img src="https://placehold.co/970x40" alt="top banner"></div>
+  <h1>AI Answer</h1>
   <div class="info-row">
-    <span><strong>Modell:</strong> GPT-4 Turbo</span>
-    <span><strong>Plan:</strong> Pro</span>
+    <span><strong>Model:</strong> gemini-2.0-flash</span> <span><strong>Plan:</strong> premium</span>
   </div>
-
-  <!-- Token-Infos -->
   <div class="info-row" style="margin-bottom:30px;">
-    <span><strong>Token-Kosten:</strong> 1234</span>
-    <span><strong>Übrige Token:</strong> 4321</span>
+    <span><strong>Cost of this Answer:</strong> 784 Tokens</span> <span><strong>Remaining:</strong> 250 Tokens</span>
   </div>
-
-  <!-- Markdown-Body -->
   <div class="body-container">
-    <p>Hallo! Gerne erkläre ich dir kurz, was Tokens bei KI-Modellen (insbesondere bei Sprachmodellen) sind:</p>
-<p><strong>Was sind Tokens?</strong></p>
-<ul>
-<li>
-<p><strong>Grundbausteine:</strong> Tokens sind die kleinsten Einheiten, in die ein KI-Modell Text zerlegt, bevor es ihn verarbeitet. Du kannst sie dir als die "Wörter" oder "Wortteile" vorstellen, die das Modell versteht und mit denen es arbeitet.</p>
-</li>
-<li>
-<p><strong>Keine reinen Wörter:</strong> Ein Token muss nicht unbedingt ein ganzes Wort sein. Es kann auch ein Teil eines Wortes, ein Satzzeichen oder ein Leerzeichen sein.</p>
-</li>
-<li>
-<p><strong>Beispiele:</strong></p>
-<ul>
-<li>Der Satz: "Hallo, wie geht es dir?" könnte in folgende Tokens zerlegt werden: <code>["Hallo", ",", " wie", " geht", " es", " dir", "?"]</code></li>
-<li>Das Wort "unverständlich" könnte in Tokens wie <code>["un", "ver", "ständ", "lich"]</code> zerlegt werden.</li>
-</ul>
-</li>
-</ul>
-<p><strong>Wie funktionieren Tokens bei KI-Modellen?</strong></p>
-<ol>
-<li>
-<p><strong>Tokenisierung:</strong> Der erste Schritt ist die <strong>Tokenisierung</strong>. Dabei wird der Eingabetext (z.B. deine Frage) in eine Sequenz von Tokens zerlegt. Dieser Prozess wird von einem speziellen Programm, dem <strong>Tokenizer</strong>, durchgeführt.</p>
-</li>
-<li>
-<p><strong>Numerische Darstellung:</strong> Jedes Token wird dann einer eindeutigen <strong>Zahl</strong> zugeordnet. Das KI-Modell arbeitet intern mit diesen Zahlen, nicht mit den Text-Tokens selbst.  Eine Tabelle (Vokabular), die jedes Token mit einer Zahl verknüpft, ist die Grundlage dafür.</p>
-</li>
-<li>
-<p><strong>Verarbeitung:</strong> Das KI-Modell verarbeitet diese Zahlenfolge, um den Kontext zu verstehen und eine Antwort zu generieren.</p>
-</li>
-<li>
-<p><strong>Generierung:</strong> Bei der Generierung von Text wandelt das Modell ebenfalls Zahlen in Tokens um. Diese Tokens werden dann wieder zu lesbarem Text zusammengesetzt.</p>
-</li>
-</ol>
-<p><strong>Warum werden Tokens verwendet?</strong></p>
-<ul>
-<li><strong>Effizienz:</strong> Die Verarbeitung von Zahlen ist für Computer effizienter als die Verarbeitung von Text.</li>
-<li><strong>Vokabularbegrenzung:</strong> KI-Modelle haben ein begrenztes Vokabular (die Menge der Tokens, die sie kennen). Durch die Zerlegung in Tokens kann ein Modell auch mit Wörtern umgehen, die nicht direkt in seinem Vokabular enthalten sind.</li>
-<li><strong>Bessere Kontextanalyse:</strong> Die Tokenisierung hilft dem Modell, den Kontext von Wörtern besser zu verstehen. Z. B. kann es "Bank" als "Sitzgelegenheit" oder "Finanzinstitut" erkennen, je nachdem, welche Tokens drumherum stehen.</li>
-</ul>
-<p><strong>Zusammenfassend:</strong> Tokens sind die kleinen Einheiten, in die Text zerlegt wird, damit KI-Modelle ihn verstehen und verarbeiten können. Sie sind wichtig für die Effizienz, die Kontextanalyse und die Fähigkeit der Modelle, mit unbekannten Wörtern umzugehen.</p>
-<p>Ich hoffe, das hilft dir weiter! Lass es mich wissen, wenn du noch Fragen hast.</p>
+    <p>Ein Reverse Proxy ist ein Server, der <strong>vor</strong> einem oder mehreren Webservern platziert wird und Anfragen von Clients entgegennimmt, diese verarbeitet und dann an den entsprechenden Backend-Server weiterleitet. Der Client interagiert also direkt mit dem Reverse Proxy, nicht mit dem eigentlichen Webserver. Der Reverse Proxy verbirgt die Identität und die interne Struktur der Backend-Server vor der Außenwelt.</p>
+    <p>Hier sind die Hauptaufgaben und Vorteile eines Reverse Proxys:</p>
+    <ul>
+      <li>
+        <p><strong>Sicherheit:</strong></p>
+        <ul>
+          <li><strong>Schutz vor Angriffen:</strong> Der Reverse Proxy kann vor häufigen Angriffen wie DDoS-Attacken, SQL-Injection und Cross-Site Scripting schützen, indem er verdächtigen Traffic filtert und blockiert, bevor er die Backend-Server erreicht.</li>
+          <li><strong>Verbergen der Serverstruktur:</strong> Er verbirgt die interne Struktur des Netzwerks und der Backend-Server vor der Außenwelt, was die Sicherheit erhöht, da Angreifer weniger Informationen über das System erhalten.</li>
+          <li><strong>SSL/TLS-Terminierung:</strong> Der Reverse Proxy kann die SSL/TLS-Verschlüsselung übernehmen, wodurch die Backend-Server entlastet werden und die Konfiguration und Verwaltung der Zertifikate zentralisiert werden kann.</li>
+        </ul>
+      </li>
+      <li>
+        <p><strong>Lastverteilung (Load Balancing):</strong></p>
+        <ul>
+          <li>Der Reverse Proxy kann eingehende Anfragen auf mehrere Backend-Server verteilen, um eine gleichmäßige Auslastung zu gewährleisten und die Leistung zu verbessern. Dies verhindert, dass ein einzelner Server überlastet wird, und sorgt für eine höhere Verfügbarkeit der Anwendung.</li>
+        </ul>
+      </li>
+      <li>
+        <p><strong>Caching:</strong></p>
+        <ul>
+          <li>Der Reverse Proxy kann häufig abgerufene Inhalte (z. B. Bilder, CSS, JavaScript) zwischenspeichern (cachen), um die Antwortzeiten für Clients zu verkürzen und die Last auf die Backend-Server zu reduzieren. Das Caching kann statisch oder dynamisch erfolgen.</li>
+        </ul>
+      </li>
+      <li>
+        <p><strong>Performance-Optimierung:</strong></p>
+        <ul>
+          <li><strong>Komprimierung:</strong> Der Reverse Proxy kann Inhalte komprimieren, bevor er sie an den Client sendet, wodurch die Bandbreite reduziert und die Übertragungsgeschwindigkeit erhöht wird.</li>
+          <li><strong>Optimierung der Verbindungen:</strong> Er kann TCP-Verbindungen optimieren und wiederverwenden, um die Latenz zu reduzieren.</li>
+        </ul>
+      </li>
+      <li>
+        <p><strong>Zentrale Verwaltung:</strong></p>
+        <ul>
+          <li>Der Reverse Proxy ermöglicht eine zentrale Verwaltung der Konfiguration, Sicherheit und Überwachung der Webanwendung. Änderungen können am Reverse Proxy vorgenommen werden, ohne die Backend-Server zu beeinträchtigen.</li>
+        </ul>
+      </li>
+      <li>
+        <p><strong>URL-Rewriting:</strong></p>
+        <ul>
+          <li>Der Reverse Proxy kann URLs umschreiben, um die Navigation zu vereinfachen oder interne Pfade vor dem Client zu verbergen. Dies ermöglicht auch die Bereitstellung mehrerer Anwendungen unter einer einzigen Domain.</li>
+        </ul>
+      </li>
+    </ul>
+    <p><strong>Zusammenfassend lässt sich sagen, dass ein Reverse Proxy als Vermittler zwischen Clients und Backend-Servern fungiert, um die Sicherheit, Leistung, Verfügbarkeit und Verwaltbarkeit einer Webanwendung zu verbessern.</strong> Er bietet einen zentralen Kontrollpunkt für den gesamten eingehenden Traffic.</p>
+    <p><strong>Beispiele für Reverse Proxy Software:</strong></p>
+    <ul>
+      <li>NGINX</li>
+      <li>Apache HTTP Server (mit Modulen wie mod_proxy)</li>
+      <li>HAProxy</li>
+      <li>Traefik</li>
+      <li>Cloudflare (als CDN mit Reverse Proxy-Funktionen)</li>
+    </ul>
+    <p><strong>Analogie:</strong> Stell dir einen Reverse Proxy wie einen Portier vor einem Hotel vor. Der Portier (Reverse Proxy) empfängt die Gäste (Clients), leitet sie an die richtigen Zimmer (Backend-Server) weiter, bietet zusätzlichen Service (Caching, Komprimierung) und sorgt für die Sicherheit des Hotels (Schutz vor Angriffen). Die Gäste sehen nie die interne Struktur des Hotels.</p>
   </div>
-
-  <!-- Message-ID -->
   <div class="message-id">
-    Message-ID: 1234567890abcdef
+    Message-ID:
   </div>
-
-  <!-- Links -->
   <div class="links-row">
-    <a href="https://example.com" style="margin:0 10px; text-decoration:none; color:#8ED1FC; font-weight:bold;">Webseite</a> <a href="https://example.com/dashboard" style="margin:0 10px; text-decoration:none; color:#8ED1FC; font-weight:bold;">Dashboard</a> <a href="https://discord.gg/example" style="margin:0 10px; text-decoration:none; color:#8ED1FC; font-weight:bold;">Discord</a>
+    <a href="https://github.com/KiSki-Dev" style="margin:0 10px; text-decoration:none; color:#8ED1FC; font-weight:bold;">GitHub</a> <a href="https://example.com/dashboard" style="margin:0 10px; text-decoration:none; color:#8ED1FC; font-weight:bold;">Dashboard</a> <a href="https://discord.gg/cYqpx7dqsn" style="margin:0 10px; text-decoration:none; color:#8ED1FC; font-weight:bold;">Discord</a>
   </div>
-
-  <!-- Bottom-Banner -->
-  <div class="banner" style="background:#111111;">
-    <img src="https://via.placeholder.com/600x50/333333/8ED1FC?text=Bottom+Banner" alt="Banner unten">
-  </div>
-
+  <div class="banner" style="background:transparent;"><img src="https://placehold.co/970x20" alt="bottom banner"></div>
 </body>
 </html>
